# match-finder

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: CNAME  app.css  app.js  index.html
docs/data/: games.json  metadata.json
scripts/: download_html.py  fetch_games.py  publish_games.sh  save_fixtures.py
src/matchcenter/: __init__.py  client.py  discovery.py  exceptions.py  exporter.py  league_parser.py  models.py  parser.py
src/matchcenter/clients/: __init__.py  base.py  playwright.py  safari.py
src/matchcenter/parsers/: __init__.py  cup.py  parser.py
tests/: test_discovery.py  test_exporter.py  test_parser.py
tests/fixtures/: cup.html  league-landing.html  league-schedule.html
