[project]
name = "matchcenter"
version = "0.1.0"
description = "Fetch and parse fixtures from SFV matchcenter websites"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14",
    "playwright>=1.58",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6",
    "pytest>=9.1",
    "ruff>=0.15",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
